making an authentication functionality using the authentication manager provided by spring security